--- a/src/css/mapstyle.css
+++ b/src/css/mapstyle.css
@@ -1,7 +1,7 @@
 .map-wrapper {
   position: relative;
   width: 100%;
-  height: 100vh;   /* 화면 전체를 지도 영역으로 */
+  height: 100vh;   
 }
 
 .map-container {
@@ -49,7 +49,6 @@
 }
 
 
-/* 우상단 핀 버튼 */
 .pin-button {
   position: fixed;
   top: 20px;
@@ -67,7 +66,7 @@
   z-index: 9999;
 }
 
-/* 색 선택 메뉴 */
+
 .color-menu {
   position: fixed;
   top: 80px;
@@ -101,9 +100,6 @@
   background: #4caf50;
 }
 
-/* --------------------- */
-/* 우상단 핀찍기 버튼 */
-/* --------------------- */
 .pin-main-button {
   position: fixed;
   top: 20px;
@@ -118,7 +114,6 @@
   z-index: 9999;
 }
 
-/* 선택 메뉴 */
 .pin-color-menu {
   position: fixed;
   top: 70px;
@@ -133,7 +128,6 @@
   z-index: 9999;
 }
 
-/* 색 선택 동그라미 */
 .pin-color {
   width: 28px;
   height: 28px;
@@ -194,3 +188,4 @@
   color: white;
   border-radius: 8px;
 }
+
